syntax = "proto3";

package exserverpb;

import "github.com/luno/reflex/reflexpb/reflex.proto";

option go_package = "github.com/luno/reflex/_example/internal/exserver/exserverpb";

service ExServer {
  rpc StreamEvent1(reflexpb.StreamRequest) returns (stream reflexpb.Event) {}
  rpc StreamEvent2(reflexpb.StreamRequest) returns (stream reflexpb.Event) {}
  rpc Echo(EchoMsg) returns (EchoMsg) {}
}

message EchoMsg {
  string message = 1;
}
